# AESolver

./: .gitignore  README.md  run_all_tests.sh
aesolver/: README.md  pyproject.toml  run_all_tests.sh
aesolver/ae_analyzer/: __init__.py  quadratic_stationary_analyzer.py  utility_functions.py
aesolver/ae_analyzer/data_files/: __init__.py  hdf5_data_path_mapper.py
aesolver/ae_analyzer/library_functions/: __init__.py  generic_histograms.py  masking.py
aesolver/aeplotter/: __init__.py  quadratic_plotter.py  utility_functions.py
aesolver/aeplotter/data_files/: __init__.py  hdf5_data_path_mapper.py  overview_plot_data.py
aesolver/aeplotter/library_functions/: __init__.py  masking.py
aesolver/aeplotter/overview_plot/: __init__.py  figure_class.py  plot.py
aesolver/aeplotter/resonance_sharpness/: __init__.py  figure_class.py  histogram.py  plot.py
aesolver/aerunners/: __init__.py  analyze_quadratic.py  plot_quadratic.py  solve_quadratic.py
aesolver/aerunners/data_modules/: __init__.py  plotter_analyzer_type_data.py  solver_type_data.py  utility_functions.py
aesolver/aesolver/: __init__.py
aesolver/aesolver/ad_nad_comparer/: __init__.py  comparer.py
aesolver/aesolver/angular_integration/: __init__.py
aesolver/aesolver/coupling_coefficients/: __init__.py  quadratic_coupling_coefficient_rotating.py
aesolver/aesolver/data_handling/: __init__.py  storer.py  unpacker.py
aesolver/aesolver/frequency_handling/: __init__.py  frequency_handler.py
aesolver/aesolver/mode_input_generator/: __init__.py  input_generator.py
aesolver/aesolver/model_handling/: __init__.py  load_models.py  read_models.py  subselection_classes.py
aesolver/aesolver/polytropic_computations/: __init__.py  poly_struct_comps.py
aesolver/aesolver/pre_checks/: __init__.py
aesolver/aesolver/read_load_info/: __init__.py  load_name_plots.py  read_info_dirs.py
aesolver/aesolver/solver/: __init__.py  quadratic_grid.py  quadratic_profile.py  quadratic_solver.py
aesolver/aesolver/stability_checker/: __init__.py
aesolver/aesolver/stationary_solving/: __init__.py
aesolver/tests/angular_integration/: data_object_mock.py  input_params.py  mock_input_enum.py  output_params.py  test_hough_integration.py
aesolver/tests/coupling_coefficients/: expected_norm_factors.py  expected_values_coupling_coefficient_rotating.py  expected_values_enumerated_mode_data.py  expected_values_hough.py  expected_values_mode_energies.py  expected_values_quadratic_coupling_coefficient_rotating.py  expected_values_super_coupling_coefficient.py  input_values_coupling_coefficient_rotating.py  input_values_quadratic_coupling_coefficient_rotating.py  input_values_super_coupling_coefficient.py  mock_gyre_detail.py  mock_mesa_profile.py  test_coupling_coefficient_rotating.py  test_enumerated_mode_data.py  test_enumerated_quadratic_coupling.py  test_quadratic_coupling_coefficient_rotating.py  test_super_coupling_coefficients.py
aesolver/tests/frequency_handling/: expected_freq_handler_values.py  mock_gyre_dicts.py  test_frequency_handler.py
aesolver/tests/mode_input_generator/: test_input_generator.py
aesolver/tests/polytropic_computations/: expected_values.py  mock_structure_data.py  test_polytropic_computations.py
aesolver/tests/pre_checks/: mock_frequency_handler_object.py  mock_mode_info_object.py  setup_object.py  test_generic_quadratic_check.py  test_three_mode_check_functions.py  test_three_mode_check_object.py
cpp-disc-integrator/: .gitignore  README.md  _custom_build.py  cpp_test.sh  pyproject.toml
cpp-disc-integrator/disc_integrator/: CMakeLists.txt  __init__.py  disc_integrals.cpp  disc_integrals.h  disc_integrals_tests.cpp  libcpp_disc_integration.cpp  libcpp_disc_integration.pyx
cpp-ld-funcs/: .gitignore  README.md  __init__.py  _custom_build.py  cpp_test.sh  pyproject.toml
cpp-ld-funcs/ld_funcs/: CMakeLists.txt  __init__.py  ld_functions.cpp  ld_functions.h  ld_functions_tests.cpp  libcpp_ld_funcs.pyx  main.cpp
cpp-numintegrator/: .gitignore  README.md  _custom_build.py  cpp_test.sh  pyproject.toml
cpp-numintegrator/num_integrator/: CMakeLists.txt  __init__.py  libcpp_num_integrator.pyx  num_integration.cpp  num_integration.h  num_integration_tests.cpp
gyre-tools/: README.md  pyproject.toml  ruff.toml
gyre-tools/gyre_cutter/: __init__.py  gyre_cutter.py
gyre-tools/gyre_eigen_norm/: __init__.py  gyre_eigen_norm.py
gyre-tools/gyre_unit_converter/: __init__.py  gyre_unit_converter.py
gyre-tools/lam_tar_gyre/: __init__.py  lam_tar_gyre.py
histogram_maker/: .gitignore  README.md  _custom_build.py  pyproject.toml
histogram_maker/hogg_jacky/: __init__.py  blas_jacky.py  numexpr_jacky.py  numpy_iterator_jacky.py
hough-func-tools/: .gitignore  README.md  pyproject.toml
hough-func-tools/cheby_transform/: __init__.py  cheby_transform.py
hough-func-tools/hough_function/: __init__.py  hough_function.py  hough_instructions.py  hough_normalizer.py
num-tools/: .gitignore  README.md  pyproject.toml
num-tools/carr_conv/: __init__.py  carr_conv.py
num-tools/num_deriv/: __init__.py  num_deriv.py  stencils.py
py-combinations/: README.md  pyproject.toml
py-combinations/pairing_functions/: __init__.py  cantor_pairing.py  symmetric_pairing.py  xie_pairing.py
py-combinations/py_combinations/: __init__.py  cartesian_combinations.py  generic_combination_class.py  single_set_combinations.py  symmetric_product.py
py-combinations/test/: test_initialization_combinations.py  test_values_combinations.py  value_subclass.py
pytest-util-tools/: LICENSE  README.md  pyproject.toml
pytest-util-tools/pytest_util_classes/: __init__.py
pytest-util-tools/pytest_util_functions/: __init__.py  assertion_checker.py  comparison.py
util-tools/: README.md  pyproject.toml
util-tools/API/: API_index.md
util-tools/API/generic_parser/: index.md
util-tools/generic_parser/: __init__.py  generic_parser.py
util-tools/inlist_handler/: __init__.py  inlist_handler.py  toml_inlist_handler.py
util-tools/log_formatter/: __init__.py  log_formatter.py
util-tools/path_resolver/: __init__.py  resolve_paths.py
(+203 files in other folders)
