[build-system]
requires = ['setuptools', 'wheel', 'numpy', 'multimethod']
build-backend = "setuptools.build_meta"

[project]
name = 'aesolver'
description = """
Contains packages used to perform mode coupling computations for g modes in main sequence pulsators.
"""
requires-python = ">=3.11"
keywords = []
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]
dependencies = [ 'pytest', 'numpy', 'scipy', 'multimethod', 'disc-integrator', 'num-tools', 'pandas', 'h5py', 'astropy', 'py-combinations', 'num-integrator', 'gyre-tools', 'hough-func-tools' ]
dynamic = ['version', 'readme']
authors = [
    { name = "Jordan Van Beeck", email = "jordanvanbeeck@hotmail.com"}
    ]

[project.urls]
"Homepage" = "https://github.com/JVB11/AESolverr"

[tool.setuptools]
platforms = ['Linux', 'MacOS']
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = 'aesolver.__version__' }
readme = { file = ['README.md', 'readme.md'] }

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
