[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "disc_integrator"
description = """
Contains methods to perform numerical integrations, implemented in C++ and interfaced with Python using Cython to compute disc-integral factors defined in Van Beeck et al. (forthcoming).
"""
requires-python = ">=3.11"
authors = [{ name = "Jordan Van Beeck", email = "jordanvanbeeck@hotmail.com" }]
license = { file = "LICENSE" }
dynamic = ["readme", "version"]
dependencies = ["numpy", "cython", "pytest", "num-integrator", "ld-funcs"]

[project.urls]
"Homepage" = "https://github.com/JVB11/AESolver"

[tool.setuptools]
platforms = ['Linux', 'MacOS']
py-modules = ["_custom_build"]
zip-safe = false

[tool.setuptools.cmdclass]
build_py = "_custom_build.build_py"

[tool.setuptools.packages]
# scan implicitly for packages (equivalent to 'find_packages()')
find = {}

[tool.setuptools.dynamic]
version = { attr = 'disc_integrator.__version__' }
readme = { file = ['README.md', 'readme.md'] }

[tool.pytest.ini_options]
pythonpath = ["."]
