[build-system]
requires = ['setuptools', 'wheel', 'numpy', 'multimethod']
build-backend = "setuptools.build_meta"

[project]
name = 'gyre-tools'
description = """
Contains utility packages used to enable smooth interaction with GYRE oscillation code output.
"""
requires-python = '>=3.11'
keywords = ['GYRE', 'tools']
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['pytest', 'multimethod', 'numpy']
dynamic = ["version", "readme"]
authors = [{ name = "Jordan Van Beeck", email = "jordanvanbeeck@hotmail.com" }]

[project.urls]
"Homepage" = "https://github.com/JVB11/AESolver"

[tool.setuptools]
platforms = ['Linux', 'MacOS']
packages = [
    'gyre_unit_converter',
    'lam_tar_gyre',
    'gyre_cutter',
    'gyre_eigen_norm.enumeration_modules',
    'gyre_eigen_norm',
]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = 'gyre_cutter.__version__' }
readme = { file = ['README.md', 'readme.md'] }

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/gyre_cutter",
    "tests/gyre_unit_converter",
    "tests/gyre_eigen_norm",
]
