[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = 'hough-func-tools'
description = """
Contains packages used to handle/compute Hough functions.
"""
requires-python = '>=3.11'
keywords = ['Hough function', 'tools']
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['pytest', 'numpy', 'num-integrator']
dynamic = ["version", "readme"]
authors = [{ name = "Jordan Van Beeck", email = "jordanvanbeeck@hotmail.com" }]

[project.urls]
"Homepage" = "https://github.com/JVB11/AESolver"

[tool.setuptools]
platforms = ['Linux', 'MacOS']
packages = ['cheby_transform', 'hough_function']
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = 'hough_function.__version__' }
readme = { file = ['README.md', 'readme.md'] }

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "6.0"
addopts = "-ra -q"
testpaths = []
