[build-system]
requires = ['setuptools', 'wheel', 'numpy', 'multimethod', 'pytest']
build-backend = "setuptools.build_meta"

[project]
name = 'pytest-util-tools'
description = """
Contains packages that facilitate writing pytest tests.
"""
requires-python = ">=3.11"
keywords = ["pytest", "tools"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['pytest', 'multimethod', 'numpy']
dynamic = ['version', 'readme']
authors = [{ name = "Jordan Van Beeck", email = "jordanvanbeeck@hotmail.com" }]

[project.urls]
"Homepage" = "https://github.com/JVB11/AESolver"

[tool.setuptools]
platforms = ['Linux', 'MacOS']
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = 'pytest_util_classes.__version__' }
readme = { file = ['README.md', 'readme.md'] }

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
