[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'util-tools'
description = """
Contains the different sub-packages that make up the utility tools.

Module list: ["log_formatter", "inlist_handler", "generic_parser", "path_resolver"]
"""
requires-python = '>=3.11'
keywords = ['utility', 'tools']
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['pytest']
dynamic = ["version", "readme"]
authors = [{ name = "Jordan Van Beeck", email = "jordanvanbeeck@hotmail.com" }]

[project.urls]
"Homepage" = "https://github.com/JVB11/AESolver"

[tool.setuptools]
platforms = ['Linux', 'MacOS']
packages = [
    'log_formatter',
    'inlist_handler',
    'generic_parser',
    'path_resolver',
]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = 'generic_parser.__version__' }
readme = { file = ['README.md', 'readme.md'] }

[tool.pytest.ini_options]
pythonpath = ["."]
